--- a/hogar.html
+++ b/hogar.html
@@ -24,7 +24,7 @@
            <p>Despu&eacute;s vino mi hermano Oscar Dar&iacute;o Guevara S&aacute;nchez el 18 de Octubre de 1998.</p>
            <p><img src="./img/familia18.jpg" alt="Hermano Oscar"/></p>
            <br><br>
-           <p>Y por último, el 15 de Mayo del 2004 nacieron mis dos pequeñas hermanas gemelas. Marisol y Maribel Guevara Sánchez</p>
+           <p>Y por &uacute;ltimo, el 15 de Mayo del 2004 nacieron mis dos peque&ntilde;as hermanas gemelas. Marisol y Maribel Guevara S&aacute;nchez</p>
            <p><img src="./img/familia15.jpg" alt="Hermanas gemelas"/></p>
            <br><br>
             <p>Mi abuela materna Bertha Ca&ntilde;edo Plaza la queremos mucho en nuestro hogar aunque ella viva en su casa, es nuestro familiar m&aacute;s cercano que tenemos y nos apoya en todo.</p>
