Se agregaron html entities que faltaban
Se les agrego las entities faltantes

--- a/diversion.html
+++ b/diversion.html
@@ -21,7 +21,7 @@
            <p>Me divierte escuchar mi m&uacute;sica favorita, siempre me pone de buen humor y me relaja bastante.</p>
               <br>
            <img src="./img/diversiones6.PNG"/>
-           <p>Me gusta ver momos en las redes sociales, eso sí que me divierte mucho y hasta me hace reir como loco.</p>
+           <p>Me gusta ver momos en las redes sociales, eso s&iacute; que me divierte mucho y hasta me hace reir como loco.</p>
              <br>
            <img src="./img/diversiones7.PNG"/>
            <p>Me gusta jugar con mis compa&ntilde;eros o amigos juegos como el UNO.</p>
