Se corrigió error en una etiqueta img
No aparecía una imagen por el formato equivocado que tenia

--- a/historias.html
+++ b/historias.html
@@ -31,7 +31,7 @@
             <p><img src="./img/historias5.jpg"/></p>
             <p>Cuando hice mi servicio militar, aprend&iacute; a marchar, primeros auxilios, armamento, ecolog&iacute;a, y muchas cosas, pase buenos y malos momentos ah&iacute;, y me demostr&eacute; a m&iacute; mismo hasta donde puedo aguantar. Tambi&eacute;n hice amigos ah&iacute; y cumpl&iacute; esa responsabilidad como mexicano.</p>
             <br>
-            <p><img src="./img/historias.jpg"/><img src="./img/historias2.jpg"/><img src="./img/historias22.jpg"/></p>
+            <p><img src="./img/historias.jpg"/><img src="./img/historias2.jpg"/><img src="./img/historias22.PNG"/></p>
             <p>Cuando fuimos a Mazatl&aacute;n toda mi familia y llegamos al acuario porque ten&iacute;a muchas ganas de ir y ah&iacute; conoc&iacute; todos aquellas especies de animales que desde ni&ntilde;o siempre quise verlas vivas, y tambi&eacute;n fuimos al zool&oacute;gico, y me la pase muy bien, parec&iacute;a ni&ntilde;o en disneylandia.</p>
             <br>
             <p><img src="./img/historias3.jpg"/><img src="./img/historias11.jpg"/></p>
