Entities,CSS,texto.
Se usaron las entities faltantes, se le aplico estilo al texto de la pagina con CSS

--- a/adolescencia.html
+++ b/adolescencia.html
@@ -1,26 +1,30 @@
 <html>
-<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
-   <body><FONT FACE="arial"><div>
-      <a href="./menu.html"><img src="./img/logo.png" /></a>
-       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
-       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
-       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
-       </div>
+<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
+   <body>
+              <table width="200" border="0">
+  <tr>
+    <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
+    <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
+    <td><a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a></td>
+    <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
+  </tr>
+</table>
        <div align=center>
+           <p class="titulos">Mi adolescencia</p>
        <img src="./img/adolescencia7.jpg" alt="Viendo un partido en el aula de la secundaria"/>
-           <p>En la secundaria comenc&eacute; a desarr&oacute;llame f&iacute;sicamente, crec&iacute; mas de altura, baje m&aacute;s peso, me salieron muchos barros, me cambio la voz, pero adem&aacute;s cambie psicol&oacute;gicamente tambi&eacute;n, al igual que todos mis compa&ntilde;eros, ya empezaba a querer salir y tomar decisiones por m&iacute; mismo y hacerme responsable de las consecuencias que tuviera, me gustaba divertirme mucho con mis compa&ntilde;eros, me gustaba llev&aacute;rmela en fiestas o visitando a cualquiera, fue una etapa llena de cambios y de adaptaci&oacute;n.</p>
+           <p class="texto">En la secundaria comenc&eacute; a desarr&oacute;llame f&iacute;sicamente, crec&iacute; mas de altura, baj&eacute; m&aacute;s peso, me salieron muchos barros, me cambi&oacute; la voz, pero adem&aacute;s cambi&eacute; psicol&oacute;gicamente tambi&eacute;n, al igual que todos mis compa&ntilde;eros, ya empezaba a querer salir y tomar decisiones por m&iacute; mismo y hacerme responsable de las consecuencias que tuviera, me gustaba divertirme mucho con mis compa&ntilde;eros, me gustaba llev&aacute;rmela en fiestas o visitando a mis amigos, fue una etapa llena de cambios y de adaptaci&oacute;n.</p>
            <br>
            <img src="./img/adolescencia2.jpg"/><img src="./img/adolescencia3.jpg"/>
-           <p>En la mayor&iacute;a de mi adolescencia me la pasaba en xv a&ntilde;os con mis amigos, algunos eran de quincea&ntilde;eras que ni conoc&iacute;amos y entrabamos de colados, nos divert&iacute;amos much&iacute;simo.</p>
+           <p class="texto">En la mayor&iacute;a de mi adolescencia me la pasaba en xv a&ntilde;os con mis amigos, algunos eran de quincea&ntilde;eras que ni conoc&iacute;amos y entrabamos de colados, nos divert&iacute;amos much&iacute;simo.</p>
            <br>
            <img src="./img/adolescencia5.jpg"/><img src="./img/adolescencia6.jpg"/>
-           <p>En preparatoria ya hab&iacute;a cambiado un poco m&aacute;s f&iacute;sicamente, ya no estaba tan delgado, hab&iacute;a embarnecido m&aacute;s, a&uacute;n segu&iacute;a con mi misma actitud de antes, aun me gustaba salir con mis amigos aunque ya no lo hac&iacute;a tan seguido como antes.</p>
+           <p class="texto">En preparatoria ya hab&iacute;a cambiado un poco m&aacute;s f&iacute;sicamente, ya no estaba tan delgado, hab&iacute;a embarnecido m&aacute;s, a&uacute;n segu&iacute;a con mi misma actitud de antes, aun me gustaba salir con mis amigos aunque ya no lo hac&iacute;a tan seguido como antes.</p>
            <br>
            <img src="./img/adolescencia4.jpg"/>
-           <p>En mi &uacute;ltimo a&ntilde;o de preparatoria ya casi no tuve cambios f&iacute;sicos pero si mentalmente, yo ya era m&aacute;s responsable, quer&iacute;a tomar mis propias decisiones y enfrentar las consecuencias, tambi&eacute;n ya no ten&iacute;a demasiados amigos, solo me quedaba con algunos pocos porque empezaba a valorar a las personas que de verdad me apreciaban a m&iacute;.</p>
+           <p class="texto">En mi &uacute;ltimo a&ntilde;o de preparatoria ya casi no tuve cambios f&iacute;sicos pero si mentalmente, yo ya era m&aacute;s responsable, quer&iacute;a tomar mis propias decisiones y enfrentar las consecuencias, tambi&eacute;n ya no ten&iacute;a demasiados amigos, solo me quedaba con algunos pocos porque empezaba a valorar a las personas que de verdad me apreciaban a m&iacute;.</p>
        </div>
       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
        
-        </FONT>
+       
        </body>
 </html>
