--- a/estudios.html
+++ b/estudios.html
@@ -1,18 +1,21 @@
 <html>
-<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
-   <body><FONT FACE="arial"><div>
-      <a href="./menu.html"><img src="./img/logo.png" /></a>
-       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
-       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
-       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
-       </div>
-       
-       <h2><p><a href="kinder.html"><li>Kinder</li></a></p></h2>
-       <h2><p><a href="primaria.html"><li>Primaria</li></a></p></h2>
-       <h2><p><a href="secundaria.html"><li>Secundaria</li></a></p></h2>
-       <h2><p><a href="preparatoria.html"><li>Preparatoria</li></a></p></h2>
-       <h2><p><a href="universidad.html"><li>Actualidad</li></a></p></h2>
+<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
+   <body>
+              <table width="200" border="0">
+  <tr>
+    <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
+    <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
+    <td><a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a></td>
+    <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
+  </tr>
+</table>
+       <p class="titulos">Mis estudios</p>
+       <h2><p><a href="kinder.html"><li class="texto">Kinder</li></a></p></h2>
+       <h2><p><a href="primaria.html"><li class="texto">Primaria</li></a></p></h2>
+       <h2><p><a href="secundaria.html"><li class="texto">Secundaria</li></a></p></h2>
+       <h2><p><a href="preparatoria.html"><li class="texto">Preparatoria</li></a></p></h2>
+       <h2><p><a href="universidad.html"><li class="texto">Actualidad</li></a></p></h2>
       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
-        </FONT>
+       
        </body>
 </html>
