--- a/fisico.html
+++ b/fisico.html
@@ -1,21 +1,25 @@
 <html>
-<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
-   <body><FONT FACE="arial"><div>
-      <a href="./menu.html"><img src="./img/logo.png" /></a>
-       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
-       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
-       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
-       </div>
-       <p>Estatura: 1.78cm</p>
-       <p>Peso: 74kg.</p>
-       <p>Color de ojos: Negros</p>
-       <p>Cabello: Negro y lacio</p>
-       <p>Biotipo: Mesomorfo</p>
+<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
+   <body>
+              <table width="200" border="0">
+  <tr>
+    <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
+    <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
+    <td><a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a></td>
+    <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
+  </tr>
+</table>
+       <p class="titulos">Mi f&iacute;sico</p>
+       <p class="texto">Estatura: 1.78cm</p>
+       <p class="texto">Peso: 74kg.</p>
+       <p class="texto">Color de ojos: Negros</p>
+       <p class="texto">Cabello: Negro y lacio</p>
+       <p class="texto">Biotipo: Mesomorfo</p>
        <div align=center><img src="./img/fisico2.jpeg" alt="Foto del primer dia de gym" />
        <img src="./img/fisico1.jpg" alt="Foto del mes 8 en el gym" />
-       <p>&#160;&#160;&#160;&#160;Foto del primer dia de gym Marzo 2016 &#160;&#160;&#160;&#160;&#160;&#160;&#160;Foto del mes 8 en el gym Noviembre 2016</p></div>
+       <p class="textocenter">&#160;&#160;&#160;&#160;Foto del primer dia de gym Marzo 2016 &#160;&#160;&#160;&#160;&#160;&#160;&#160;Foto del mes 8 en el gym Noviembre 2016</p></div>
       
        <p><a href="./menu.html"><img src="./img/botonRegresar.png" alt="Boton de regresar"/></a></p>
-       </FONT>
+      
        </body>
 </html>
