Se le ajustó el texto de la lista y se aplicó css
Se le aplicó estilo al texto con CSS y se le agregaron las entities faltantes.

--- a/gustos.html
+++ b/gustos.html
@@ -1,15 +1,19 @@
 <html>
-<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
-   <body><FONT FACE="arial"><div>
-      <a href="./menu.html"><img src="./img/logo.png" /></a>
-       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
-       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
-       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
-       </div>
-       <h2><p><a href="megusta.html"><li>Cosas que me gustan</li></a></p></h2>
-       <h2><p><a href="nomegusta.html"><li>Cosas que no me gustan</li></a></p></h2>
+<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
+   <body>
+              <table width="200" border="0">
+  <tr>
+    <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
+    <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
+    <td><a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a></td>
+    <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
+  </tr>
+</table>
+       <p class="titulos">Mis gustos</p>
+       <h1><p><a href="megusta.html"><li  class="texto">Cosas que me gustan</li></a></p></h1>
+       <h1><p><a href="nomegusta.html"><li  class="texto">Cosas que no me gustan</li></a></p></h1>
        
       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
-        </FONT>
+       
        </body>
 </html>
