Se aplicó css a el texto de la pagina web
Se le aplicó estilo al texto con CSS y se le agregaron las entities faltantes.

--- a/historias.html
+++ b/historias.html
@@ -1,53 +1,57 @@
 <html>
-<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
-   <body><FONT FACE="arial"><div>
-      <a href="./menu.html"><img src="./img/logo.png" /></a>
-       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
-       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
-       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
-       </div>
-        <div align=center><h1>Historias que me gusta recordar</h1>
+<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
+   <body>
+              <table width="200" border="0">
+  <tr>
+    <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
+    <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
+    <td><a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a></td>
+    <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
+  </tr>
+</table>
+       <p class="titulos">Historias que me gusta recordar</p>
+        <div align=center>
             <img src="./img/historias9.jpg"/>
-            <p>Cuando ten&iacute;a algunos 5 a&ntilde;os mi papa nos llev&oacute; a un show de delfines y lobos marinos a una feria que vino a Los Mochis, a&uacute;n recuerdo que me sub&iacute; en la rueda de la fortuna, el carrusel, y cuando me tome esa fotograf&iacute;a con los lobos marinos aunque yo quer&iacute;a tomarme con los delfines, desde ese d&iacute;a los delfines los considere como mi animal favorito.</p>
+            <p class="texto">Cuando ten&iacute;a algunos 5 a&ntilde;os mi papa nos llev&oacute; a un show de delfines y lobos marinos a una feria que vino a Los Mochis, a&uacute;n recuerdo que me sub&iacute; en la rueda de la fortuna, el carrusel, y cuando me tome esa fotograf&iacute;a con los lobos marinos aunque yo quer&iacute;a tomarme con los delfines, desde ese d&iacute;a los delfines los considere como mi animal favorito.</p>
            <br>
             <img src="./img/historias12.jpg"/><img src="./img/historias4.jpg"/><img src="./img/historias7.jpg"/>
-            <p>Me gusta recordar mis cumplea&ntilde;os y las personas que estuvieron ah&iacute; para celebrarlo, estas fotograf&iacute;as son de cuando cumpl&iacute; 17,19,y 20 a&ntilde;os.</p>
+            <p class="texto">Me gusta recordar mis cumplea&ntilde;os y las personas que estuvieron ah&iacute; para celebrarlo, estas fotograf&iacute;as son de cuando cumpl&iacute; 17,19,y 20 a&ntilde;os.</p>
             <br>
             <p><img src="./img/historias13.jpg"/><img src="./img/historias14.jpg"/></p>
-            <p>Cuando fui a la pista de hielo con mis amigos, ah&iacute; me ense&ntilde;e a patinar por primera vez, tarde menos de una hora aprender, me ca&iacute; unas 8 veces ese d&iacute;a hasta llegue a sacarme sangre de los brazos cuando me raspaba en el hielo, despu&eacute;s volv&iacute;amos a ir mas d&iacute;as, incluso dos a&ntilde;os, y en esas veces me divert&iacute;a mucho porque chocaba con otras personas porque no se frenar aun, y mientras nos tom&aacute;bamos foto sal&iacute;an personas cay&eacute;ndose en el hielo, o una ni&ntilde;a que llega con nosotros y posa en la foto y ni siquiera la conoc&iacute;amos.</p>
+            <p class="texto">Cuando fui a la pista de hielo con mis amigos, ah&iacute; me ense&ntilde;e a patinar por primera vez, tarde menos de una hora aprender, me ca&iacute; unas 8 veces ese d&iacute;a hasta llegue a sacarme sangre de los brazos cuando me raspaba en el hielo, despu&eacute;s volv&iacute;amos a ir mas d&iacute;as, incluso dos a&ntilde;os, y en esas veces me divert&iacute;a mucho porque chocaba con otras personas porque no se frenar aun, y mientras nos tom&aacute;bamos foto sal&iacute;an personas cay&eacute;ndose en el hielo, o una ni&ntilde;a que llega con nosotros y posa en la foto y ni siquiera la conoc&iacute;amos.</p>
             <br>
             <img src="./img/historias23.jpg"/>
-            <p>Cuando estaba en primero de prepa fui con amigas a comer a Tostileyva y hab&iacute;a una concurso, sobre subir una foto en tostileyva consumiendo alg&uacute;n producto y la foto con m&aacute;s likes se ganar&iacute;a una sesi&oacute;n de fotos gratis, y nos animamos y ganamos, aunque me divert&iacute; mucho, no me gustaron las fotos.</p>
+            <p class="texto">Cuando estaba en primero de prepa fui con amigas a comer a Tostileyva y hab&iacute;a una concurso, sobre subir una foto en tostileyva consumiendo alg&uacute;n producto y la foto con m&aacute;s likes se ganar&iacute;a una sesi&oacute;n de fotos gratis, y nos animamos y ganamos, aunque me divert&iacute; mucho, no me gustaron las fotos.</p>
             <br>
             <p><img src="./img/historias1.jpg"/><img src="./img/historias6.jpg"/><img src="./img/historias20.jpg"/></p>
-            <p>Me gusta mucho andar en bici y algunas veces que he ido a rodadas, de rueda verde y rodada drag&oacute;n, en una ocasi&oacute;n de rueda verde llegue hasta el punto m&aacute;s lejos del recorrido donde ten&iacute;amos que dar vuelta para regresarnos, y en cuanto llegue a lo m&aacute;s lejos se me cae el pedal izquierdo y se me pierde un tornillo y yo viv&iacute;a muy lejos de ah&iacute; y ya eran las diez de la noche y un amigo me cambio su bici por la m&iacute;a para yo llegar a mi casa en ella y ya otro d&iacute;a ir por mi bici, desde entonces antes de ir a una rodada le doy mantenimiento a mi bicicleta.</p>
+            <p class="texto">Me gusta mucho andar en bici y algunas veces que he ido a rodadas, de rueda verde y rodada drag&oacute;n, en una ocasi&oacute;n de rueda verde llegue hasta el punto m&aacute;s lejos del recorrido donde ten&iacute;amos que dar vuelta para regresarnos, y en cuanto llegue a lo m&aacute;s lejos se me cae el pedal izquierdo y se me pierde un tornillo y yo viv&iacute;a muy lejos de ah&iacute; y ya eran las diez de la noche y un amigo me cambio su bici por la m&iacute;a para yo llegar a mi casa en ella y ya otro d&iacute;a ir por mi bici, desde entonces antes de ir a una rodada le doy mantenimiento a mi bicicleta.</p>
             <br>
             <img src="./img/historias8.jpg" />
-            <p>Cuando en Halloween me disfrace por primera vez yo y mi mejor amiga sobre personajes del mundo de los comics de DC ella del Guason y yo de El Diablo, y ah&iacute; en la fiesta nos hicimos amigos de otros que iban tambi&eacute;n del mismo tema que nosotros.</p>
+            <p class="texto">Cuando en Halloween me disfrace por primera vez yo y mi mejor amiga sobre personajes del mundo de los comics de DC ella del Guason y yo de El Diablo, y ah&iacute; en la fiesta nos hicimos amigos de otros que iban tambi&eacute;n del mismo tema que nosotros.</p>
             <br>
             <p><img src="./img/historias16.jpg"/><img src="./img/historias17.jpg"/></p>
-            <p>Las veces que he salido con mis amigos a pasarla bien en alguno de sus cumplea&ntilde;os, en restobares, cenando y bebiendo un poco, hablando sobre cualquier tonter&iacute;a.</p>
+            <p class="texto">Las veces que he salido con mis amigos a pasarla bien en alguno de sus cumplea&ntilde;os, en restobares, cenando y bebiendo un poco, hablando sobre cualquier tonter&iacute;a.</p>
             <br>
             <p><img src="./img/historias5.jpg"/></p>
-            <p>Cuando hice mi servicio militar, aprend&iacute; a marchar, primeros auxilios, armamento, ecolog&iacute;a, y muchas cosas, pase buenos y malos momentos ah&iacute;, y me demostr&eacute; a m&iacute; mismo hasta donde puedo aguantar. Tambi&eacute;n hice amigos ah&iacute; y cumpl&iacute; esa responsabilidad como mexicano.</p>
+            <p class="texto">Cuando hice mi servicio militar, aprend&iacute; a marchar, primeros auxilios, armamento, ecolog&iacute;a, y muchas cosas, pase buenos y malos momentos ah&iacute;, y me demostr&eacute; a m&iacute; mismo hasta donde puedo aguantar. Tambi&eacute;n hice amigos ah&iacute; y cumpl&iacute; esa responsabilidad como mexicano.</p>
             <br>
             <p><img src="./img/historias.jpg"/><img src="./img/historias2.jpg"/><img src="./img/historias22.PNG"/></p>
-            <p>Cuando fuimos a Mazatl&aacute;n toda mi familia y llegamos al acuario porque ten&iacute;a muchas ganas de ir y ah&iacute; conoc&iacute; todos aquellas especies de animales que desde ni&ntilde;o siempre quise verlas vivas, y tambi&eacute;n fuimos al zool&oacute;gico, y me la pase muy bien, parec&iacute;a ni&ntilde;o en disneylandia.</p>
+            <p class="texto">Cuando fuimos a Mazatl&aacute;n toda mi familia y llegamos al acuario porque ten&iacute;a muchas ganas de ir y ah&iacute; conoc&iacute; todos aquellas especies de animales que desde ni&ntilde;o siempre quise verlas vivas, y tambi&eacute;n fuimos al zool&oacute;gico, y me la pase muy bien, parec&iacute;a ni&ntilde;o en disneylandia.</p>
             <br>
             <p><img src="./img/historias3.jpg"/><img src="./img/historias11.jpg"/></p>
-            <p>Cuando fuimos de semana santa a Nayarit y fuimos a Otatitos, un centro botanero y ah&iacute; ten&iacute;an unas lanchas que jalaban a muy alta velocidad un inflable donde pod&iacute;as subirte y vivir algo de adrenalina y diversi&oacute;n, al principio yo no quer&iacute;a porque le tengo fobia a lo profundo porque no se nadar bien, y al final si me anime junto con mis primos porque nos dieron chaleco salvavidas y me la pase muy padre y quisiera volver a subirme.</p>
+            <p class="texto">Cuando fuimos de semana santa a Nayarit y fuimos a Otatitos, un centro botanero y ah&iacute; ten&iacute;an unas lanchas que jalaban a muy alta velocidad un inflable donde pod&iacute;as subirte y vivir algo de adrenalina y diversi&oacute;n, al principio yo no quer&iacute;a porque le tengo fobia a lo profundo porque no se nadar bien, y al final si me anime junto con mis primos porque nos dieron chaleco salvavidas y me la pase muy padre y quisiera volver a subirme.</p>
             <br>
             <p><img src="./img/historias18.jpg"/></p>
-            <p>Cuando fui a la funci&oacute;n de las doce de la noche de la pel&iacute;cula de Civil War con mi amiga Alondra y su novio y llegamos y estaba llen&iacute;simo de j&oacute;venes queriendo entrar a verla desesperados y nos metimos sin hacer cola y a m&iacute; me quer&iacute;an sacar pero corr&iacute; y me les perd&iacute; a los guardias, y fui de los primeros en entrar.</p>
+            <p class="texto">Cuando fui a la funci&oacute;n de las doce de la noche de la pel&iacute;cula de Civil War con mi amiga Alondra y su novio y llegamos y estaba llen&iacute;simo de j&oacute;venes queriendo entrar a verla desesperados y nos metimos sin hacer cola y a m&iacute; me quer&iacute;an sacar pero corr&iacute; y me les perd&iacute; a los guardias, y fui de los primeros en entrar.</p>
             <br>
             <p><img src="./img/historias19.jpg"/></p>
-            <p>Cuando acampe por primera vez. Siempre hab&iacute;a querido acampar en la playa y aunque no era como le lo imaginaba si me la pase muy bien, fui con dos amigos y la familia de mi amigo, y acampamos junto con 200 familias m&aacute;s aproximadamente, yo no sab&iacute;a que en San Juan en semana santa muchas personas iban all&aacute; a pasar d&iacute;as acampando, hab&iacute;a negocios de comida, cruz roja, y muchas cosas, pero era una batalla conseguir ba&ntilde;o para hacer las necesidades b&aacute;sicas.</p>
+            <p class="texto">Cuando acampe por primera vez. Siempre hab&iacute;a querido acampar en la playa y aunque no era como le lo imaginaba si me la pase muy bien, fui con dos amigos y la familia de mi amigo, y acampamos junto con 200 familias m&aacute;s aproximadamente, yo no sab&iacute;a que en San Juan en semana santa muchas personas iban all&aacute; a pasar d&iacute;as acampando, hab&iacute;a negocios de comida, cruz roja, y muchas cosas, pero era una batalla conseguir ba&ntilde;o para hacer las necesidades b&aacute;sicas.</p>
             <br>
             <p><img src="./img/historias21.PNG"/></p>
-            <p>Cuando voy al rancho en Mocorito y voy a veces con mi tio a ayudarle a llevar agua a el ganado que tiene.</p>
+            <p class="texto">Cuando voy al rancho en Mocorito y voy a veces con mi tio a ayudarle a llevar agua a el ganado que tiene.</p>
        </div>
        
 <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
-        </FONT>
+       
        </body>
 </html>
