Se le aplicó css al texto y entities restantes
Se le aplicó estilo al texto con CSS y se le agregaron las entities faltantes.

--- a/megusta.html
+++ b/megusta.html
@@ -1,12 +1,16 @@
 <html>
-<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
-   <body><FONT FACE="arial"><div>
-      <a href="./menu.html"><img src="./img/logo.png" /></a>
-       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
-       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
-       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
-       </div>
-       <div align="center"><h1>Me gusta</h1>
+<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
+   <body>
+       <table width="200" border="0">
+  <tr>
+    <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
+    <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
+    <td><a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a></td>
+    <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
+  </tr>
+</table>
+       <p class="titulos">Me gusta</p>
+       <div align="center">
            <br>
        <img src="./img/gustos1.jpg" alt="Foto mia patinando en hielo"/><img src="./img/gustos20.PNG" alt="Foto intentando tocar el piano"/><img src="./img/gustos17.jpg" border="1"/>
        <p>Me gusta aprender cosas nuevas, como por ejemplo patinar, o cosas que me ayuden para mi profesionalismo laboral, en estos momentos quisiera aprender alg&uacute;n tipo de combate como kick-boxing y tambi&eacute;n aprender a tocar el piano.</p>
@@ -52,6 +56,6 @@
        <p>Me hubiera gustado tambi&eacute;n estudiar Biolog&iacute;a marina, u odontolog&iacute;a.</p>
        </div>
   <p><a href="./gustos.html"><img src="./img/botonRegresar.png"/></a></p>
-        </FONT>
+       
        </body>
 </html>
