Se cambió el panel superior
Se ordeno dentro de una tabla para el momento de tener mucho zoom el navegador estas imágenes no pierdan su orden

--- a/menu.html
+++ b/menu.html
@@ -1,12 +1,14 @@
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
-   <body><div>
-      <a href="./menu.html"><img src="./img/logo.png" /></a>
-       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
-       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
-       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
-       </div>
-     
+   <body >
+              <table width="300" border="0" >
+  <tr>
+    <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
+    <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
+    <td><a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a></td>
+    <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
+  </tr>
+</table>
   <table width="950" border="0">
   <tr>
       <td width="95"><a href="./infancia.html"><img src="./img/botonInfancia.png" /></a></td>
@@ -36,6 +38,7 @@
     <td><a href="./historias.html"><img src="./img/botonHistorias.png" /></a></td>
     <td><a href="./amistades.html"><img src="./img/botonAmistades.png" /></a></td>
   </tr>
-</table> 
+</table>
 </body>
 </html>
+
