--- a/partieron.html
+++ b/partieron.html
@@ -1,27 +1,30 @@
 <html>
-<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
-   <body><FONT FACE="arial"><div>
-      <a href="./menu.html"><img src="./img/logo.png" /></a>
-       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
-       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
-       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
-       </div>
+<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
+   <body>
+              <table width="200" border="0">
+  <tr>
+    <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
+    <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
+    <td><a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a></td>
+    <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
+  </tr>
+</table>
        
        <div align=center><img src="./img/luto.jpg"/>
-            <h1><p>Familiares que ya partieron</p></h1>
-            <h2><p>DESCANSE EN PAZ</p></h2>
+            <h1><p class="titulos">Familiares que ya partieron</p></h1>
+            <h2><p class="textocenter">DESCANSE EN PAZ</p></h2>
            <p><img src="./img/familia21.jpg"/></p>
-            <h4><p>Leovigildo Guevara Fonseca(Abuelo)</p></h4>
+            <h4><p class="textocenter">Leovigildo Guevara Fonseca(Abuelo)</p></h4>
            <p><img src="./img/familia10.jpg"/></p>
-            <h4><p>Sirenia Fonseca Real(Bisabuela)</p></h4>
+            <h4><p class="textocenter">Sirenia Fonseca Real(Bisabuela)</p></h4>
            <p><img src="./img/familia22.jpg"/></p>
-            <h4><p>Christian Guevara Cañedo(Tio)</p></h4>
-           <p><img src="./img/familia14.jpg"/></p>
-            <h4><p>Consuelo Gonzalez Juarez(Abuela)</p></h4>
-           <p><img src="./img/familia13.jpg"/></p>
-            <h4><p>Jos&eacute; Luis S&aacute;nchez Gutierrez(Abuelo)</p></h4>
+            <h4><p class="textocenter">Christian Guevara Ca&ntilde;edo(Tio)</p></h4>
+           <p><img src="./img/familia14.jpg" width="300" /></p>
+            <h4><p class="textocenter">Consuelo Gonzalez Juarez(Abuela)</p></h4>
+           <p><img src="./img/familia13.jpg" width="300"/></p>
+            <h4><p class="textocenter">Jos&eacute; Luis S&aacute;nchez Gutierrez(Abuelo)</p></h4>
        </div>
           <p><a href="./familia.html"><img src="./img/botonRegresar.png"/></a></p>
-        </FONT>
+       
        </body>
 </html>
