Se aplicó css a la pagina
Se le aplicó estilo al texto con CSS y se le agregaron las entities faltantes.

--- a/paterna.html
+++ b/paterna.html
@@ -1,23 +1,28 @@
 <html>
-<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
-   <body><FONT FACE="arial"><div>
-      <a href="./menu.html"><img src="./img/logo.png" /></a>
-       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
-       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
-       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
-       </div>
-       <div align=center><h1>Familia Paterna</h1>
+<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
+   <body>
+       
+              <table width="200" border="0">
+  <tr>
+    <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
+    <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
+    <td><a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a></td>
+    <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
+  </tr>
+</table>
+        <p class="titulos">Familia paterna</p>
+      <div align=center>
            <p><img src="./img/familia4.jpg" border="4 "alt="Imagen de mi familia paterna cuando fuimos a Nayarit de vacaciones"/></p>
-           <p>Fotograf&iacute;a de mi familia paterna cuando fuimos de vacaciones Nayarit y a celebrar la fiesta de mi abuela por sus 65 a&ntilde;os de vida. Fue un d&iacute;a muy especial y divertido. Aparecen mi familia, algunos hermanos de mi papa y su familia, y gran cantidad de familia de la hermana de mi abuela que viven en Ciudad Obreg&oacute;n.</p>
-           <p>Mi padre tiene 5 hermanos, Ricardo, Christian, Joel, Agustina, y Mariano, sus padres Bertha y Leovigildo</p>
+           <p class="texto">Fotograf&iacute;a de mi familia paterna cuando fuimos de vacaciones Nayarit y a celebrar la fiesta de mi abuela por sus 65 a&ntilde;os de vida. Fue un d&iacute;a muy especial y divertido. Aparecen mi familia, algunos hermanos de mi papa y su familia, y gran cantidad de familia de la hermana de mi abuela que viven en Ciudad Obreg&oacute;n.</p>
+           <p class="texto">Mi padre tiene 5 hermanos, Ricardo, Christian, Joel, Agustina, y Mariano, sus padres Bertha y Leovigildo</p>
            <br><br>
            <p><img src="./img/familia17.png" alt="Fotografia familiar"/></p>
-           <p>         
+           <p class="texto">         
            Ultima fotografia familiar donde aparece mi padre con su mama y algunos de sus hermanos Joel, Agustina, y Mariano.Mi padre es el mayor de todos los hermanos. </p>
            <br><br>
-           <p>Actualmente todos los hermanos de mi papa tienen su familia, Mariano, Joel y Agustina viven en Los Mochis, Ricardo vive en Culiac&aacute;n, somos una familia  </p>
+           <p class="texto">Actualmente todos los hermanos de mi papa tienen su familia, Mariano, Joel y Agustina viven en Los Mochis, Ricardo vive en Culiac&aacute;n, somos una familia  </p>
        </div>
         <p><a href="./familia.html"><img src="./img/botonRegresar.png"/></a></p>
-        </FONT>
+       
        </body>
 </html>
