--- a/salud.html
+++ b/salud.html
@@ -1,24 +1,28 @@
 <html>
-<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /></head>
-   <body><FONT FACE="arial"><div>
-      <a href="./menu.html"><img src="./img/logo.png" /></a>
-       <a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a>
-       <a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a>
-       <a href="./telefono.html"><img src="./img/panelTelefono.png" /></a>
-       </div>
+<head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
+   <body>
+              <table width="200" border="0">
+  <tr>
+    <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
+    <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
+    <td><a href="./ubicacion.html"><img src="./img/panelUbicacion.png" /></a></td>
+    <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
+  </tr>
+</table>
        <div align=center>
-       <h5><p>A los 3 a&ntilde;os me dio varicela y un a&ntilde;o despu&eacute;s me dio Hepatitis A. A los 6 a&ntilde;os me operaron y me quitaron las anginas, no fue doloroso pero si incomodo porque vomitaba, pero me recetaron comer mucha pizza y nieve, y dure 2 meses que me la llevaba comiendo eso. A los 18 a&ntilde;os me sacaron por cirug&iacute;a las muelas del juicio inferiores, y 2 muelas m&aacute;s inferiores por extracci&oacute;n. En estos &uacute;ltimos 10 a&ntilde;os no tuve alguna otra enfermedad peligrosa, solo infecciones de garganta, gripa, tos, o infecciones de est&oacute;mago, gracias a Dios gozo hoy de buena salud.</p></h5>
+           <p class="titulos">Mi salud</p>
+       <p class="texto" class="texto">A los 3 a&ntilde;os me dio varicela y un a&ntilde;o despu&eacute;s Hepatitis A.  A los 6 a&ntilde;os me operaron y me quitaron las anginas, no fue doloroso pero si incomodo porque vomitaba, pero me recetaron comer mucha pizza y nieve, dur&eacute; 2 meses que me la llevaba comiendo eso. A los 18 a&ntilde;os me sacaron por cirug&iacute;a las muelas del juicio , y a los meses, me sacaron dos muelas m&aacute;s inferiores por extracci&oacute;n. En estos &uacute;ltimos 10 a&ntilde;os no tuve alguna otra enfermedad peligrosa, solo infecciones de garganta, gripa, tos, o infecciones de est&oacute;mago, gracias a Dios gozo hoy de buena salud.</p>
            <br>
            <img src="./img/salud4.jpeg"/> <img src="./img/salud5.jpeg"/>
-           <p>Foto de molde de como ten&iacute;a los dientes antes de ortodoncia.</p>
+           <p class="texto">Foto de molde de como ten&iacute;a los dientes antes de ortodoncia.</p>
            
            <br><br><br>
            <img src="./img/salud2.jpg"/><img src="./img/salud3.jpg"/>
-           <p>Mi sonrisa antes de los brackets y despues de 2 meses teniendo brackets</p>
+           <p class="texto">Mi sonrisa antes de los brackets y despues de 2 meses teniendo brackets</p>
            <p><img src="./img/adolescencia.jpg"/></p>
-           <p>Foto usando los brackets 2 años y 6 meses</p>
+           <p class="texto">Foto usando los brackets 2 a&ntilde;os y 6 meses. 6 Enero 2017</p>
        </div>
       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
-        </FONT>
+        
        </body>
 </html>
