Corrección en una palabra mal escrita
Se corrigió una palabra que tenia una letra de más

--- a/nomegusta.html
+++ b/nomegusta.html
@@ -31,7 +31,7 @@
     <p class="texto">No me gusta el sistema de seguridad que hay en mi pa&iacute;s, donde sea hay corrupci&oacute;n y abusos por parte de las autoridades.</p>
      <br>
     <img src="./img/gustos37.jpeg"/>
-    <p class="texto">No me gusta comer caldos de verduras. Se que son muy nutritivos, pero no me gustan para nada, me da mucho asco, pero la verdura en comidac china si me gusta mucho.</p>  
+    <p class="texto">No me gusta comer caldos de verduras. Se que son muy nutritivos, pero no me gustan para nada, me da mucho asco, pero la verdura en comida china si me gusta mucho.</p>  
      <br>
     <img src="./img/gustos38.jpg"/>
     <p class="texto">No me gusta escuchar la m&uacute;sica de corridos y la banda, y toda esa m&uacute;sica que le habla de lo bueno que es ser infiel a tu pareja, que hablan de las mujeres como objetos, que un hombre vale m&aacute;s por los bienes materiales que tiene como los carros de lujo, el alcohol que bebe, las mansiones, y toda esa m&uacute;sica que les da m&aacute;s fama a los narcotraficantes, alentando a aquellos que las escuchan que as&iacute; deben de ser.</p>
