Se le aplicaron más estilos con CSS
Se le aplicó fondo con css, y se le aplico nuevos estilos al texto y a las imágenes con border y margin.

--- a/estudios.html
+++ b/estudios.html
@@ -1,7 +1,8 @@
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
-   <body>
-              <table width="200" border="0">
+     <body class="textura">
+       <div  class="fondopanel">
+              <table width="300" border="0" >
   <tr>
     <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
     <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
@@ -9,12 +10,13 @@
     <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
   </tr>
 </table>
+       </div>
        <p class="titulos">Mis estudios</p>
-       <h2><p><a href="kinder.html"><li class="texto">Kinder</li></a></p></h2>
-       <h2><p><a href="primaria.html"><li class="texto">Primaria</li></a></p></h2>
-       <h2><p><a href="secundaria.html"><li class="texto">Secundaria</li></a></p></h2>
-       <h2><p><a href="preparatoria.html"><li class="texto">Preparatoria</li></a></p></h2>
-       <h2><p><a href="universidad.html"><li class="texto">Actualidad</li></a></p></h2>
+       <h2><p><a href="kinder.html"><li><img src="./img/botonKinder.png" /></li></a></p></h2>
+       <h2><p><a href="primaria.html"><li><img src="./img/botonPrimaria.png" /></li></a></p></h2>
+       <h2><p><a href="secundaria.html"><li><img src="./img/botonSecundaria.png" /></li></a></p></h2>
+       <h2><p><a href="preparatoria.html"><li><img src="./img/botonPreparatoria.png" /></li></a></p></h2>
+       <h2><p><a href="universidad.html"><li><img src="./img/botonActualidad.png" /></li></a></p></h2>
       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
        
        </body>
