--- a/familia.html
+++ b/familia.html
@@ -1,7 +1,8 @@
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
-   <body>
-              <table width="200" border="0">
+    <body class="textura">
+       <div  class="fondopanel">
+              <table width="300" border="0" >
   <tr>
     <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
     <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
@@ -9,11 +10,12 @@
     <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
   </tr>
 </table>
+       </div>
        <p class="titulos">Mi familia</p>
-       <h1><p><a href="hogar.html"><li class="texto">Mi Hogar</li></a></p></h1>
-       <h1><p><a href="materna.html"><li class="texto">Familia Materna</li></a></p></h1>
-       <h1><p><a href="paterna.html"><li class="texto">Famlilia Paterna</li></a></p></h1>
-       <h1><p><a href="partieron.html"><li class="texto">Familiares que ya partieron</li></a></p></h1>
+       <h1><p><a href="hogar.html"><li><img src="./img/botonHogar.png"/></li></a></p></h1>
+       <h1><p><a href="materna.html"><li><img src="./img/botonMaterna.png"/></li></a></p></h1>
+       <h1><p><a href="paterna.html"><li><img src="./img/botonPaterna.png"/></li></a></p></h1>
+       <h1><p><a href="partieron.html"><li><img src="./img/botonPartieron.png"/></li></a></p></h1>
        
        <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
       
