Se aplicaron mas estilos
Se le aplicó fondo con css, y se le aplico nuevos estilos al texto y a las imágenes con border y margin.

--- a/gustos.html
+++ b/gustos.html
@@ -1,7 +1,8 @@
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
-   <body>
-              <table width="200" border="0">
+    <body class="textura">
+       <div  class="fondopanel">
+              <table width="300" border="0" >
   <tr>
     <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
     <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
@@ -9,9 +10,10 @@
     <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
   </tr>
 </table>
+       </div>
        <p class="titulos">Mis gustos</p>
-       <h1><p><a href="megusta.html"><li  class="texto">Cosas que me gustan</li></a></p></h1>
-       <h1><p><a href="nomegusta.html"><li  class="texto">Cosas que no me gustan</li></a></p></h1>
+       <h1><p><a href="megusta.html"><li><img src="./img/botonGusta.png" /></li></a></p></h1>
+       <h1><p><a href="nomegusta.html"><li><img src="./img/botonNoGusta.png" /></li></a></p></h1>
        
       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
        
