Se aplicaron mas estilos con css
Se le aplicó fondo con css, y se le aplico nuevos estilos al texto y a las imágenes con border y margin.

--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,7 @@
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
-   <body >
+   <body>
+       <div  class="fondopanel">
               <table width="300" border="0" >
   <tr>
     <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
@@ -9,6 +10,7 @@
     <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
   </tr>
 </table>
+       </div>
   <table width="950" border="0">
   <tr>
       <td width="95"><a href="./infancia.html"><img src="./img/botonInfancia.png" /></a></td>
@@ -41,4 +43,3 @@
 </table>
 </body>
 </html>
-
