Se aplicaron nuevos estilos con css
Se le aplicó fondo con css, y se le aplico nuevos estilos al texto y a las imágenes con border y margin.

--- a/partieron.html
+++ b/partieron.html
@@ -1,7 +1,8 @@
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
-   <body>
-              <table width="200" border="0">
+     <body class="textura">
+       <div  class="fondopanel">
+              <table width="300" border="0" >
   <tr>
     <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
     <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
@@ -9,8 +10,9 @@
     <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
   </tr>
 </table>
+       </div>
        
-       <div align=center><img src="./img/luto.jpg"/>
+       <div align=center><img src="./img/luto.png"/>
             <h1><p class="titulos">Familiares que ya partieron</p></h1>
             <h2><p class="textocenter">DESCANSE EN PAZ</p></h2>
            <p><img src="./img/familia21.jpg"/></p>
@@ -24,7 +26,11 @@
            <p><img src="./img/familia13.jpg" width="300"/></p>
             <h4><p class="textocenter">Jos&eacute; Luis S&aacute;nchez Gutierrez(Abuelo)</p></h4>
        </div>
-          <p><a href="./familia.html"><img src="./img/botonRegresar.png"/></a></p>
+          <p><a href="./familia.html"><img src="./img/botonRegresar.png"/></a>
+       <a href="./hogar.html"><img src="./img/botonHogar.png" width="200" /></a>
+       <a href="./materna.html"><img src="./img/botonMaterna.png" width="200" /></a>
+       <a href="./paterna.html"><img src="./img/botonPaterna.png" width="200"/></a>
+       </p>
        
        </body>
 </html>
