--- a/redesSociales.html
+++ b/redesSociales.html
@@ -1,7 +1,8 @@
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
-    <body>
-               <table width="200" border="0">
+   <body>
+       <div  class="fondopanel">
+              <table width="300" border="0" >
   <tr>
     <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
     <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
@@ -9,9 +10,10 @@
     <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
   </tr>
 </table>
-        <p class="texto"><a href="https://www.facebook.com/Oswaldo.guevara.s" target="_blank"><img src="./img/facebook.png" weight="100" height="100"/></a>Facebook</p>
-        <p class="texto"><a href="https://twitter.com/OswaldoGuevaraS" target="_blank"><img src="./img/twitter.png" weight="100" height="100"/></a>Twitter</p>
-        <p class="texto"><a href="https://www.instagram.com/oswaldoguevara/" target="_blank"><img src="./img/instagram.png" weight="100" height="100"/></a>Instagram</p>
+       </div>
+        <h3><p><a href="https://www.facebook.com/Oswaldo.guevara.s" target="_blank"><img src="./img/facebook.png" weight="100" height="100"/></a>Facebook</p></h3>
+        <h3><p ><a href="https://twitter.com/OswaldoGuevaraS" target="_blank"><img src="./img/twitter.png" weight="100" height="100"/></a>Twitter</p></h3>
+        <h3><p ><a href="https://www.instagram.com/oswaldoguevara/" target="_blank"><img src="./img/instagram.png" weight="100" height="100"/></a>Instagram</p></h3>
        
          
        <h2 class="texto">Correo electronico: oswaldoguevaras@hotmail.com</h2>
