Se aplicó mas estilos con css y se ordeno texto
Se le aplicó fondo con css, y se le aplico nuevos estilos al texto y a las imágenes con border y margin.

--- a/telefono.html
+++ b/telefono.html
@@ -1,7 +1,8 @@
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
-     <body>
-                <table width="200" border="0">
+   <body>
+       <div  class="fondopanel">
+              <table width="300" border="0" >
   <tr>
     <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
     <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
@@ -9,9 +10,10 @@
     <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
   </tr>
 </table>
+       </div>
        <p><img src="./img/whatsapp.png"/></p>
          <h2><p>Celular:</p></h2>
-       <p class="texto">66-81-84-70-25</p>
+         <h1><p>66-81-84-70-25</p></h1>
        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
        <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
       
