--- a/ubicacion.html
+++ b/ubicacion.html
@@ -1,7 +1,8 @@
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
-   <body>
-              <table width="200" border="0">
+    <body>
+       <div  class="fondopanel">
+              <table width="300" border="0" >
   <tr>
     <td><a href="./menu.html"><img src="./img/logo.png" /></a></td>
     <td><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" /></a></td>
@@ -9,8 +10,9 @@
     <td><a href="./telefono.html"><img src="./img/panelTelefono.png" /></a></td>
   </tr>
 </table>
+       </div>
      
- <h1 class="texto">Haz click en el icono</h1>
+ <h1>Haz click en el icono</h1>
        <p><a href="https://www.google.com.mx/maps/place/San+Nicol%C3%A1s+de+Los+Garza+2065,+Terra+Nova,+81270+Los+Mochis,+Sin./@25.7721442,-109.0083622,17z/data=!3m1!4b1!4m5!3m4!1s0x86ba258c49cf62a1:0x6b511899403e0f3b!8m2!3d25.7721442!4d-109.0061735" target="_blank"><img src="./img/mapa.png" weight="100" height="100"/></a></p>
        
        <br><br><br><br><br><br><br><br><br><br><br><br><br> 
