Se aplicó más estilos con css y un pie de página
Se hicieron y aplicaron más estilos css y se le agregó un pequeño pie de pagina

--- a/estudios.html
+++ b/estudios.html
@@ -18,6 +18,6 @@
        <h2><p align="center"><a href="preparatoria.html"><img src="./img/botonPreparatoria.png" /></a></p></h2>
        <h2><p align="center"><a href="universidad.html"><img src="./img/botonActualidad.png" /></a></p></h2>
       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
-       
+       <div class="pie">Oswaldo Guevara S&aacute;nchez</div>
        </body>
 </html>
