Se aplicó más estilos con css y un pie de página
Se hicieron y aplicaron más estilos css y se le agregó un pequeño pie de pagina

--- a/familia.html
+++ b/familia.html
@@ -16,6 +16,6 @@
        <h1><p align="center"><a href="partieron.html"><img src="./img/botonPartieron.png"/></a></p></h1>
        
        <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
-      
+      <div class="pie">Oswaldo Guevara S&aacute;nchez</div>
        </body>
 </html>
