Se aplicó más estilos con css y un pie de página
Se hicieron y aplicaron más estilos css y se le agregó un pequeño pie de pagina

--- a/gustos.html
+++ b/gustos.html
@@ -14,6 +14,6 @@
        <h1><p align="center"><a href="nomegusta.html"><img src="./img/botonNoGusta.png" /></a></p></h1>
        
       <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
-       
+       <div class="pie">Oswaldo Guevara S&aacute;nchez</div>
        </body>
 </html>
