Se aplicó más estilos con css y un pie de página
Se hicieron y aplicaron más estilos css y se le agregó un pequeño pie de pagina

--- a/telefono.html
+++ b/telefono.html
@@ -14,7 +14,6 @@
          <h1><p>66-81-84-70-25</p></h1>
        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
        <p><a href="./menu.html"><img src="./img/botonRegresar.png"/></a></p>
-      
+      <div class="pie">Oswaldo Guevara S&aacute;nchez</div>
        </body>
 </html>
-
