--- a/secundaria.html
+++ b/secundaria.html
@@ -1,13 +1,16 @@
 <html>
 <head><title>Bienvenido a mi vida</title><link rel="icon" type="miniIcono.png" href="./img/miniIcono.png" /><link rel=stylesheet type="text/css" href="./miEstilo.css"/></head>
      <body class="textura">
-     <ul>
-      
-              <li><a href="./menu.html"><img src="./img/logo.png" title="Click para ir a menu principal"/></a></li>
-              <li><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" title="Entrar para ver mis redes sociales" /></a></li>
-              <li><a href="./ubicacion.html"><img src="./img/panelUbicacion.png" title="Entrar para conocer mi ubicacion"/></a></li>
-              <li><a href="./telefono.html"><img src="./img/panelTelefono.png" title="Entrar para conocer mi telefono"/></a></li>
-             
+                  <ul>
+      <table border="0">
+  <tr>
+      <td><li><a href="./menu.html"><img src="./img/logo.png" title="Click para ir a menu principal"/></a></li></td>
+      <td><li><a href="./redesSociales.html"><img src="./img/panelRedesSociales.png" title="Entrar para ver mis redes sociales" /></a></li></td>
+      <td><li><a href="./ubicacion.html"><img src="./img/panelUbicacion.png" title="Entrar para conocer mi ubicacion"/></a></li></td>
+      <td><li><a href="./telefono.html"><img src="./img/panelTelefono.png" title="Entrar para conocer mi telefono"/></a></li></td>
+      <td><li><a href="./instrucciones.html"><img src="./img/panelTest.png" title="Entrar para probar que tanto me conoces"/></a></li></td>
+          </tr>
+               </table>
        </ul>
        <p class="titulos">Secundaria</p>
        <div align=center class="border margen fondomargen">
